# Crawldesk

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  PRD.md  README.md  crawldesk_halftone.py  e2e-test-comprehensive.js  e2e-test.js  eslint.config.mjs  package-lock.json  package.json  qa-full.js  tailwind.config.js  tsconfig.base.json  tsconfig.check.json  tsconfig.main.json  tsconfig.preload.json  tsconfig.worker.json  vite.config.ts  vitest.config.ts
docs/agents/: domain.md  triage-labels.md
main/: main.js  main.js.map  windows.js  windows.js.map
preload/: preload.js  preload.js.map
references/: screaming-frog-features.md
scripts/: smoke-mock-ui.mjs  smoke-tauri-release.mjs
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: gen.py  gen_icon.py
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: app.rs  cluster.rs  content.rs  crawl.rs  diff.rs  export.rs  extraction.rs  issue.rs  keyword.rs  link.rs  mod.rs  performance.rs  project.rs  schedule.rs  settings.rs  url.rs
src-tauri/src/core/: mod.rs
src-tauri/src/core/config/: mod.rs
src-tauri/src/core/crawler/: engine.rs  fetcher.rs  frontier.rs  issue_registry.rs  issues.rs  mod.rs  models.rs  normalizer.rs  parser.rs  post_crawl.rs  robots.rs  scope.rs  sitemap.rs
src-tauri/src/core/events/: mod.rs
src-tauri/src/core/storage/: db.rs  mod.rs  models.rs  queries.rs  writer.rs
src-tauri/tests/: integration_roundtrip.rs
tests/: db-utils.ts  link-graph-analyzer.test.ts  normalizer.test.ts  paged-result.test.ts  pagination-analyzer.test.ts  pagination-extraction.test.ts  private-ip-guard.test.ts  scope.test.ts  sitemap-comparison.test.ts  sitemap.test.ts  xml-sitemap-generator.test.ts
worker/: crawler-worker.js  crawler-worker.js.map
(+247 files in other folders)
