[package]
name = "crawldesk"
version = "0.2.0"
edition = "2021"
description = "Local-first desktop SEO crawler backend (Tauri + Rust)"

[lib]
name = "crawldesk_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri framework
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2"

# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# HTTP client
reqwest = { version = "0.12", features = ["json", "gzip", "brotli", "deflate", "cookies"] }
scraper = "0.22"
url = "2.5"

# HTML parsing
lol_html = "1.2"

# JSON-LD / structured data
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
rusqlite = { version = "0.32", features = ["bundled", "limits"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "chrono"], optional = true }

# Time
chrono = { version = "0.4", features = ["serde"] }
time = { version = "0.3", features = ["serde"] }

# Networking / DNS
trust-dns-resolver = "0.23"
ipnet = "2.9"

# Robots.txt parser

# Sitemap XML parsing
xml = "0.8"

# Sitemap parsing
rss = "2.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
rand = "0.8"
regex = "1"
once_cell = "1.19"
hex = "0.4"
sha2 = "0.10"
urlencoding = "2.1"
flate2 = "1.0"
mime = "0.3"
encoding_rs = "0.8"

# Concurrency utilities
futures = "0.3"

# Rate limiting (reserved for future use)
# governor = "0.7"

# CSV export
csv = "1"

# Error handling (using thiserror where needed)
anyhow = "1"
# thiserror = "2"
